--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets -->
 
-● LIVE: [Landing of Mars InSight Lander](https://www.youtube.com/watch?v=j3yC9nI4sNc) November 26, 2018 20:00 UTC (3 p.m. EST). {: .notice}
+● LIVE: [Landing of Mars InSight Lander](https://www.youtube.com/watch?v=j3yC9nI4sNc) November 26, 2018 20:00 UTC (3 p.m. EST)
 
 <!-- end custom head snippets -->
