--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,7 +1,5 @@
-<!--
   <li>
-    <a href="http://link-to-whatever-social-network.com/user/" itemprop="sameAs">
-      <i class="fas fa-fw" aria-hidden="true"></i> Custom Social Profile Link
+    <a href="https://www.youtube.com/watch?v=j3yC9nI4sNc" itemprop="sameAs">
+      <i class="fas fa-fw" aria-hidden="true"></i> ● LIVE: Landing of Mars InSight Lander - November 26, 2018 20:00 UTC (3 p.m. EST)
     </a>
   </li>
--->
