--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,2 +1,3 @@
 <!-- start custom footer snippets -->
+<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">E-mail</a> for ads & business inquiries.
 <!-- end custom footer snippets -->
