--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">E-mail</a> for ads & business inquiries.
+<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">E-mail for ads & business inquiries.</a>
 <!-- end custom footer snippets -->
