--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -6,4 +6,5 @@
 <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+<a href="https://discord.gg/gyNUe9w">Community</a>
 </head>
