--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -6,4 +6,15 @@
 <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+  
+<!-- Global site tag (gtag.js) - Google Ads: 813527901 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-813527901"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-813527901');
+</script>
+
 </head>
