--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -256,6 +256,9 @@
           </a>
         </li>
       {% endif %}
+      
+      <a href="http://www.dpbolvw.net/t697y1A719PZRZZVZYPRTTQTRRT" target="_blank">
+<img src="http://www.lduhtrp.net/hq105ltxlrpAKCKKGKJACEEBECCE" alt="Shared Hosting - from $2.88/mo" border="0"/></a>
 
       {% include author-profile-custom-links.html %}
     </ul>
