--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -258,7 +258,7 @@
       {% endif %}
       
       <a href="http://www.dpbolvw.net/t697y1A719PZRZZVZYPRTTQTRRT" target="_blank">
-<img src="http://www.lduhtrp.net/hq105ltxlrpAKCKKGKJACEEBECCE" height="160" width="600" alt="Shared Hosting - from $2.88/mo" border="0"/></a>
+<img src="http://www.lduhtrp.net/hq105ltxlrpAKCKKGKJACEEBECCE" style="max-width:100%;" alt="Shared Hosting - from $2.88/mo" border="0"/></a>
 
       {% include author-profile-custom-links.html %}
     </ul>
