--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,1 +1,2 @@
-<a href="http://www.kqzyfj.com/in70shqnhp4E6EEAED46697E5A8">Looking for a cheap domain name? Get it from Namecheap! Prices start at $3.98/year</a>
+<br>
+<i class="fas fa-ad"></i><a href="http://www.kqzyfj.com/in70shqnhp4E6EEAED46697E5A8"> Looking for a cheap domain name? Get it from Namecheap! Prices start at $3.98/year</a>
