--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -16,5 +16,7 @@
 
   gtag('config', 'AW-813527901');
 </script>
+  
+<script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0090/6899.js" async="async"></script>
 
 </head>
