--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,16 +8,16 @@
 <meta name="theme-color" content="#ffffff">
   
 <!-- Global site tag (gtag.js) - Google Ads: 813527901 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-813527901"></script>
-<script>
+<amp-script async src="https://www.googletagmanager.com/gtag/js?id=AW-813527901"></amp-script>
+<amp-script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'AW-813527901');
-</script>
+</amp-script>
   
-<script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0090/6899.js" async="async"></script>
+<amp-script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0090/6899.js" async="async"></amp-script>
   
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
