--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -86,15 +86,15 @@ layout: default
       {% include comments.html %}
     {% endif %}
   
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <amp-script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></amp-script>
 <!-- Head -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-7868661326160958"
      data-ad-slot="3023285567"></ins>
-<script>
+<amp-script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</amp-script>
    </article>
 
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
