--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -163,4 +163,6 @@
 {% if site.naver-site-verification %}
   <meta name="naver-site-verification" content="{{ site.naver-site-verification }}">
 {% endif %}
+
+<script async src="https://cdn.ampproject.org/v0.js"></script>
 <!-- end _includes/seo.html -->
