--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -9,7 +9,7 @@
   
 <!-- Global site tag (gtag.js) - Google Ads: 813527901 -->
 <amp-script async src="https://www.googletagmanager.com/gtag/js?id=AW-813527901"></amp-script>
-<amp-script>
+<amp-script script="gtag">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
