--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<amp-script>
+<amp-script script="documentElement">
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </amp-script>
 
