--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,15 +30,15 @@ layout: default
           {% if page.read_time %}
             <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
           {% endif %}
-<amp-script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></amp-script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- g1 -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-7868661326160958"
      data-ad-slot="3023285567"></ins>
-<amp-script>
+<script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</amp-script>
+</script>
         </header>
       {% endunless %}
 
@@ -67,15 +67,15 @@ layout: default
         {% endif %}
       </footer>
 
-      <amp-script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></amp-script>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Head -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-7868661326160958"
      data-ad-slot="3023285567"></ins>
-<amp-script>
+<script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</amp-script>
+</script>
       
       {% if page.share %}{% include social-share.html %}{% endif %}
 
@@ -86,15 +86,15 @@ layout: default
       {% include comments.html %}
     {% endif %}
   
-  <amp-script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></amp-script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Head -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:728px;height:90px"
      data-ad-client="ca-pub-7868661326160958"
      data-ad-slot="3023285567"></ins>
-<amp-script>
+<script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</amp-script>
+</script>
    </article>
 
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
