--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,17 +12,9 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    {% if include.type == "grid" and teaser %}
-      <div class="archive__item-teaser">
-        <img src=
-          {% if teaser contains "://" %}
-            "{{ teaser }}"
-          {% else %}
-            "{{ teaser | absolute_url }}"
-          {% endif %}
-          alt="">
-      </div>
-    {% endif %}
+    <a class="archive_teaser" href="{{ post.url | absolute_url }}" rel="permalink">
+    <img src="{{ teaser }}" style="width: 600px; height: 150px; object-fit: cover; border-radius: 10px;">
+    </a>
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.url | absolute_url }}" rel="permalink"><i class="fas fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
